<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantryActivity">

    <LinearLayout
        android:id="@+id/pantryLabelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pantryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/MyPantryLabel"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="162dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/pantryLabelLayout"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="241dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/IngredientToAddLabel"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="123dp"
                tools:layout_editor_absoluteY="158dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="99dp"
                tools:layout_editor_absoluteY="196dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddToPantryButton"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="263dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/navSearchButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/navSearchButton" />

        <Button
            android:id="@+id/navCalendarButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/navCalendarButton" />

        <Button
            android:id="@+id/navPantryButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/navPantryButton" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>